# python-telemetry

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  build.py  main.py  noxfile.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: cd.yml  ci.yml
docs/: conf.py  index.md
examples/: test_scipy.ipynb  test_scipy.py  test_span.py  test_stats_uploader.py  test_statswrapper.py
src/api_tracer/: __init__.py  console.py  entrypoint.py  path_finder.py  span.py
src/api_tracer/span_exporter/: collector.py
src/api_tracer/span_processor/: __init__.py  collector.py
src/api_tracer/statswrapper/: _stats_wrapper.c
src/telemetric/: __init__.py  console.py  entrypoint.py  path_finder.py  span.py
src/telemetric/ga4/: __init__.py  analytics.py  ga4_proxy.py  stats_uploader.py
src/telemetric/statswrapper/: __init__.py  _stats_wrapper.c
tests/: test_package.py  test_scipy.ipynb  test_scipy.py  test_span.py
